añadi boton enviar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <br><br>
     <label for="password">Ingrese su password:</label>
     <input type="password" name="password" id="password">
+    <br><br>
+    <button type="submit" id="boton">Acceder</button>
     <footer>
         <p>¿No tienes una cuenta? Click aquí para <a href="registro.html">registrarte </a></p>
     </footer>
