añadi formulario y registro

--- a/registro.html
+++ b/registro.html
@@ -4,10 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="estilos.css"/>
+    <link rel="stylesheet" type="text/css" href="formulario.css"/>
+    <style>
+        form {
+     margin: 0 auto;
+    width: 400px;
+    }
+    </style>
     <title>Registro</title>
 </head>
 <body>
     <h1 id="titulo">BIENVENIDO AL REGISTRO DEL SISTEMA</h1>
+
+    <form action="" class="form">
+        <h1 class="title">Sign up</h1>
+  
+        <div class="inputContainer">
+          <input type="text" class="input" placeholder="a">
+          <label for="" class="label">Nombre</label>
+        </div>
+  
+        <div class="inputContainer">
+          <input type="text" class="input" placeholder="a">
+          <label for="" class="label">Apellido Paterno</label>
+        </div>
+  
+        <div class="inputContainer">
+          <input type="text" class="input" placeholder="a">
+          <label for="" class="label">Apellido Materno</label>
+        </div>
+  
+        <div class="inputContainer">
+          <input type="text" class="input" placeholder="a">
+          <label for="" class="label">Numero de</label>
+        </div>
+  
+        <div class="inputContainer">
+            <input type="text" class="input" placeholder="a">
+            <label for="" class="label">Contraseña</label>
+          </div>
+    
+          <div class="inputContainer">
+            <input type="text" class="input" placeholder="a">
+            <label for="" class="label">Confirmar Contraseña</label>
+          </div>
+
+        <input type="submit" class="submitBtn" value="Enviar">
+      </form>
+    </div>
 </body>
 </html>
