se modifico el formulario de ingreso, se añadio css basico a index y registro y se agrego la carpeta imagenes

--- a/registro.html
+++ b/registro.html
@@ -5,19 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="formulario.css"/>
-    <style>
-        form {
-     margin: 0 auto;
-    width: 400px;
-    }
-    </style>
     <title>Registro</title>
 </head>
 <body>
     <h1 id="titulo">BIENVENIDO AL REGISTRO DEL SISTEMA</h1>
 
     <form action="" class="form">
-        <h1 class="title">Sign up</h1>
+        <h1 class="title">Registro</h1>
   
         <div class="inputContainer">
           <input type="text" class="input" placeholder="a">
@@ -36,9 +30,19 @@
   
         <div class="inputContainer">
           <input type="text" class="input" placeholder="a">
-          <label for="" class="label">Numero de</label>
+          <label for="" class="label">Numero de Control</label>
+        </div>
+
+        <div class="inputContainer">
+          <input type="text" class="input" placeholder="a">
+          <label for="" class="label">Correo Electronico</label>
         </div>
   
+        <div class="inputContainer">
+          <input type="text" class="input" placeholder="a">
+          <label for="" class="label">Confirmar Correo</label>
+        </div>
+
         <div class="inputContainer">
             <input type="text" class="input" placeholder="a">
             <label for="" class="label">Contraseña</label>
@@ -48,7 +52,7 @@
             <input type="text" class="input" placeholder="a">
             <label for="" class="label">Confirmar Contraseña</label>
           </div>
-
+<br></br>
         <input type="submit" class="submitBtn" value="Enviar">
       </form>
     </div>
